# GeoParse-India

./: .gitignore  LICENSE  README.md  pyproject.toml
geoparse/: __init__.py
geoparse/api/: __init__.py  app.py  models.py
geoparse/data/: __init__.py  address_components.py  generate_dataset.py  synthetic_generator.py
geoparse/geocoder/: __init__.py  engine.py  query_builder.py  spatial_index.py
geoparse/ner/: __init__.py  dataset.py  inference.py  label_schema.py  trainer.py
geoparse/phonetic/: __init__.py  corrector.py
geoparse/static/: app.js  index.html  style.css
tests/: test_api.py  test_label_schema.py  test_phonetic_corrector.py  test_query_builder.py  test_synthetic_generator.py
