[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoparse-india"
version = "1.0.0"
description = "Hierarchical Address Disambiguation & Geocoding Engine for Indian Logistics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Susmit Goswami"}]
keywords = ["nlp", "geocoding", "india", "ner", "logistics", "address-disambiguation", "h3", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/susmitgoswami5/GeoParse-India"
"Bug Tracker" = "https://github.com/susmitgoswami5/GeoParse-India/issues"

dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "h3>=3.7.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jellyfish>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "seqeval>=1.2.2",
    "metaphone>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["geoparse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
